--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.4",
@@ -14,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "jss-rtl": "^0.3.0",
+    "material-ui-image": "^3.3.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +26,8 @@
     "redux": "^4.1.1",
     "stylis-plugin-rtl": "1.0.0",
     "swiper": "^6.8.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
