--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-verification-input": "^2.0.3",
     "redux": "^4.1.1",
     "stylis": "^4.0.10",
     "stylis-plugin-rtl": "^1.0.0",
