--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "react-verification-input": "^2.0.3",
     "redux": "^4.1.1",
     "stylis": "^4.0.10",
