--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
     "aos": "^3.0.0-beta.6",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "jss-rtl": "^0.3.0",
     "material-ui-image": "^3.3.2",
+    "mobiscroll-react": "^4.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
