--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-toastify": "^8.0.3",
     "react-verification-input": "^2.0.3",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.4.0",
     "stylis": "^4.0.10",
     "stylis-plugin-rtl": "^1.0.0",
     "swiper": "^6.8.4",
