--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mobiscroll-react": "^4.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-awesome-calendar": "^1.0.14",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-loading": "^2.0.3",
