--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hooks-helper": "^1.6.0",
     "react-loading": "^2.0.3",
     "react-multi-date-picker": "^3.1.7",
     "react-recaptcha": "^2.3.10",
