--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "jalali-date": "^1.1.4",
     "jss-rtl": "^0.3.0",
     "material-ui-image": "^3.3.2",
     "mobiscroll-react": "^4.0.0",
