--- a/package.json
+++ b/package.json
@@ -19,18 +19,21 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "draft-js": "^0.11.7",
     "formik": "^2.2.9",
-    "jalali-react-datepicker": "^1.2.1",
-    "material-ui-persian-date-picker-utils": "^0.1.2",
-    "moment-hijri": "^2.1.2",
     "jalali-date": "^1.1.4",
+    "jalali-react-datepicker": "^1.2.1",
     "jss-rtl": "^0.3.0",
     "material-ui-image": "^3.3.2",
+    "material-ui-persian-date-picker-utils": "^0.1.2",
     "mobiscroll-react": "^4.0.0",
+    "moment-hijri": "^2.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-awesome-calendar": "^1.0.14",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.1.16",
+    "react-dropzone": "^11.4.2",
     "react-helmet": "^6.1.0",
     "react-hooks-helper": "^1.6.0",
     "react-loading": "^2.0.3",
