--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
-    "jalali-react-datepicker": "^1.2.1",
-    "material-ui-persian-date-picker-utils": "^0.1.2",
-    "moment-hijri": "^2.1.2",
     "jalali-date": "^1.1.4",
+    "jalali-react-datepicker": "^1.2.1",
     "jss-rtl": "^0.3.0",
+    "material-ui-chip-input": "^2.0.0-beta.2",
     "material-ui-image": "^3.3.2",
+    "material-ui-persian-date-picker-utils": "^0.1.2",
     "mobiscroll-react": "^4.0.0",
+    "moment-hijri": "^2.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-awesome-calendar": "^1.0.14",
