--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.2",
     "react-awesome-calendar": "^1.0.14",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-drag-drop-files": "^2.1.16",
     "react-dropzone": "^11.4.2",
     "react-helmet": "^6.1.0",
