--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
     "jalali-date": "^1.1.4",
     "jalali-react-datepicker": "^1.2.1",
