--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dropzone": "^11.4.2",
     "react-helmet": "^6.1.0",
     "react-hooks-helper": "^1.6.0",
+    "react-html-parser": "^2.0.2",
     "react-loading": "^2.0.3",
     "react-multi-date-picker": "^3.1.7",
     "react-recaptcha": "^2.3.10",
