--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
@@ -35,6 +36,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-awesome-calendar": "^1.0.14",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-drag-drop-files": "^2.1.16",
