[fix] fix drawer open direction in teacher dashboard + [feat] wallet minor changes

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^17.0.2",
     "react-awesome-calendar": "^1.0.14",
     "react-chartjs-2": "^4.0.0",
+    "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-drag-drop-files": "^2.1.16",
@@ -46,6 +47,7 @@
     "react-html-parser": "^2.0.2",
     "react-loading": "^2.0.3",
     "react-multi-date-picker": "^3.1.7",
+    "react-payment-card-component": "^0.2.1",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
