--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-awesome-calendar": "^1.0.14",
     "react-chartjs-2": "^4.0.0",
     "react-countup": "^6.1.0",
+    "react-currency-input-field": "^3.6.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-drag-drop-files": "^2.1.16",
