--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Kooleposhti Web App",
   "short_name": "Kooleposhti",
-  "theme_color": "#fff",
-  "background_color": "#fff",
+  "theme_color": "#FEA23E",
+  "background_color": "#FEA23E",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
