[fix]: register class flow and manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kooleposhti Web App",
+  "name": "Kooleposhti",
   "short_name": "Kooleposhti",
   "theme_color": "#FEA23E",
   "background_color": "#FEA23E",
